# llms-expose-science-codex

./: .resource_finder_complete  README.md  REPORT.md  literature_review.md  planning.md  pyproject.toml  resources.md
.idea-explorer/: idea.yaml  pipeline_results.json  pipeline_state.json
code/: README.md
datasets/: .gitignore  README.md
logs/: execution_codex_transcript.jsonl  research_prompt.txt  resource_finder_codex_transcript.jsonl  resource_finder_prompt.txt  session_instructions.txt
papers/: README.md
results/: metrics_summary.csv
results/llm_outputs/: llm_runs.json
src/: analyze_results.py  run_experiments.py
